--- a/css/style.css
+++ b/css/style.css
@@ -1,49 +1,139 @@
-
-.inline-block {
-    display: inline-block;
-    vertical-align: top;
+html {
+  scroll-behavior: smooth;
 
 }
-.logo {
-    width: 23%;
-    padding: 1%;
-    text-align: center;
+
+body {
+  margin: 0;
 }
-nav {
-    width: 73%;
-    padding: 1%;
+
+header {
+  background-color: #373738;
+  padding: 15px;
 }
-ul {
-    width: 50%;
-    margin-left: auto;
+
+header ul {
+  float: right;
+  color: white;
+}
+
+header li {
+  display: inline-block;
+  padding: 0px 5px;
+}
+
+header p {
+  display: inline-block;
 }
 
 .heroImg {
-    height: 610px;
-    padding: 25px;
+  background-color: #EBEBEB;
+  padding: 100px 15px;
 }
+
 .content {
-    width: 500px;
-    margin: 0 auto;
+  max-width: 300px;
+  margin: 0 auto;
+  padding: 50px;
+  background-color: #FFFFFF;
+  text-align: center;
 }
+
+button {
+  padding: 15px;
+  background-color: #373738;
+  color: white;
+  font-size: 15px;
+  border-radius: 4px;
+}
+
 footer {
-    background-color: #373738;
+  background-color: #373738;
+  padding: 5px;
+  color: white;
 }
-footer>ul {
-    display: inline-block;
-    vertical-align: top;
+
+footer ul {
+  list-style: none;
+  padding-left: 5px;
 }
-ul>li {
-    padding: center;
+
+footer li {
+  display: inline-block;
+  padding: 0px 7px;
 }
+
+.heading {
+  text-align: center;
+  padding: 15px 5px;
+  font-size: 30px;
+}
+
+/* My UX Skills Section */
 .flexContainer {
-    display: flex;
-    justify-content: space-evenly;
-    flex-direction: row;
+  display: flex;
+  padding: 60px 30px;
 }
-@media only screen and (max-width: 600) {
-    .flexContainer {
-        flex-direction: column;
-        width: 100%;
-    }
+
+.flexContainer div {
+  width: 33%;
+  padding: 25px;
+}
+
+/* My Work Section */
+.myWork {
+  padding: 60px 30px;
+  padding-top: 0;
+  background-color: #EBEBEB;
+}
+
+.workGrid {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 350px 350px 350px;
+  grid-template-areas:
+    "img1 content1"
+    "img2 content2"
+    "img3 content3"
+  ;
+}
+
+.workGrid img {
+  width: 100%;
+  max-width: 250px;
+  margin: 0 auto;
+  display: block;
+}
+
+.img1 {
+  grid-area: img1;
+}
+
+.img2 {
+  grid-area: img2;
+}
+
+.img3 {
+  grid-area: img3;
+}
+
+.img1,
+.img2,
+.img3,
+.content1,
+.content2,
+.content3 {
+  padding: 80px;
+}
+
+.content1 {
+  grid-area: content1;
+}
+
+.content2 {
+  grid-area: content2;
+}
+
+.content3 {
+  grid-area: content3;
 }
